# pixelfrog

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py  config.json  pixelfrog-spec.docx
.github/workflows/: build.yml
scripts/: ci_write_manifest.py  local_jfrog_ci.env.example  local_jfrog_ci.sh
src/: filters.cpp  filters.h  logger.cpp  logger.h  main.cpp  processor.cpp  processor.h
test/: test_cli.cpp  test_filters.cpp  test_processor.cpp
